--- a/admin/index.html
+++ b/admin/index.html
@@ -28,8 +28,8 @@ table { width:100%; border-collapse:collapse; background:#fff }
 th, td { border:1px solid #ccc; padding:6px; font-size:12px }
 th { background:#222; color:#fff }
 
-/* Styl dla zablokowanego pola LP */
-.lp-input {
+/* Styl dla zablokowanych pól */
+.readonly-input {
   background: #f8f9fa;
   border: 1px solid #ddd;
   color: #666;
@@ -62,15 +62,19 @@ th { background:#222; color:#fff }
   display: flex;
   flex-direction: column;
   gap: 5px;
+  height: 100%;
+  min-height: 60px;
+  justify-content: space-between;
 }
 .status-info {
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 4px 8px;
+  padding: 6px 10px;
   border-radius: 4px;
   background: #f8f9fa;
   font-size: 12px;
+  min-height: 32px;
 }
 .current-status {
   font-weight: bold;
@@ -79,21 +83,23 @@ th { background:#222; color:#fff }
   font-size: 14px;
 }
 
-/* Przycisk "Ustaw jako gotowy" */
+/* Przycisk "Ustaw jako gotowy" - dopasowany do wysokości */
 .set-ready-btn {
   background: #2ecc71;
   color: white;
   border: none;
-  padding: 6px 12px;
+  padding: 8px 12px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 11px;
+  font-size: 12px;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 5px;
   width: 100%;
-  justify-content: center;
+  height: 36px;
   transition: background 0.2s;
+  box-sizing: border-box;
 }
 .set-ready-btn:hover {
   background: #27ae60;
@@ -103,25 +109,30 @@ th { background:#222; color:#fff }
   cursor: not-allowed;
 }
 
-/* Styl dla "Pokaż kontakt" - podobny do statusu */
+/* Styl dla "Pokaż kontakt" - dopasowany do wysokości */
 .show-contact-container {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  height: 100%;
+  min-height: 60px;
+  justify-content: center;
 }
 .contact-options {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 6px;
 }
 .contact-option {
   display: flex;
   align-items: center;
-  gap: 6px;
+  gap: 8px;
   cursor: pointer;
-  padding: 4px 8px;
+  padding: 6px 10px;
   border-radius: 4px;
   background: #f8f9fa;
+  min-height: 32px;
+  box-sizing: border-box;
 }
 .contact-radio {
   transform: scale(1.2);
@@ -158,12 +169,35 @@ th { background:#222; color:#fff }
   border: 1px solid #f5c6cb;
 }
 
+/* Przycisk Zapisz - zachowuje oryginalny styl */
+.save-btn {
+  background: #2ecc71;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  width: 100%;
+  height: auto;
+  margin-top: 5px;
+}
+.save-btn:hover {
+  background: #27ae60;
+}
+
 /* ===== MOBILE ===== */
 @media (max-width: 768px) {
   td input,
   td button {
     box-sizing: border-box;
     max-width: 100%;
+  }
+  
+  .set-ready-btn,
+  .contact-option {
+    height: auto;
+    min-height: 40px;
   }
 }
 
@@ -182,7 +216,7 @@ th { background:#222; color:#fff }
     grid-template-columns: 120px 1fr;
     align-items:center;
     border:none;
-    padding:6px 0;
+    padding:8px 0;
     font-size:14px;
   }
   td::before { content: attr(data-label); font-weight:600; color:#444; }
@@ -195,16 +229,27 @@ th { background:#222; color:#fff }
   /* Specjalny styl dla status na mobile */
   td[data-label="Status"] {
     grid-template-columns: 120px 1fr;
+    align-items: stretch;
   }
   
   /* Specjalny styl dla pokaż kontakt na mobile */
   td[data-label="Pokaż kontakt"] {
     grid-template-columns: 120px 1fr;
+    align-items: stretch;
   }
   .contact-options {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
+  }
+  .contact-option {
+    flex: 1;
+    min-width: 100px;
+  }
+  
+  .status-container,
+  .show-contact-container {
+    min-height: 80px;
   }
 }
 </style>
@@ -228,7 +273,7 @@ th { background:#222; color:#fff }
   <table>
     <thead>
       <tr>
-        <th>LP</th>
+        <th>Lp</th>
         <th>Imię</th>
         <th>Nazwisko</th>
         <th>Telefon</th>
@@ -456,13 +501,15 @@ async function loadData() {
     const statusContainerId = `status-container-${row.id}`;
     
     tr.innerHTML = `
-      <td data-label="LP">
-        <input class="lp-input" value="${row.lp || ""}" readonly>
+      <td data-label="Lp">
+        <input class="readonly-input" value="${row.lp || ""}" readonly>
       </td>
       <td data-label="Imię"><input value="${row.imie || ""}"></td>
       <td data-label="Nazwisko"><input value="${row.nazwisko || ""}"></td>
       <td data-label="Telefon"><input value="${row.telefon || ""}"></td>
-      <td data-label="Email"><input value="${row.email || ""}"></td>
+      <td data-label="Email">
+        <input class="readonly-input" value="${row.email || ""}" readonly>
+      </td>
       <td data-label="Status">
         <div id="${statusContainerId}">
           <div class="status-container">
@@ -608,12 +655,12 @@ async function loadData() {
         }
       }
       
-      // Pomijamy pole LP w payloadzie, bo jest readonly
+      // Pomijamy pola Lp i Email w payloadzie, bo są readonly
       const payload = {
-        imie: inputs[1].value, // Pomijamy inputs[0] (LP)
+        imie: inputs[1].value,    // Pomijamy inputs[0] (Lp)
         nazwisko: inputs[2].value,
         telefon: inputs[3].value,
-        email: inputs[4].value,
+        // Pomijamy inputs[4] (Email)
         status: currentStatus,
         show_contact: showContactValue
       };
