--- a/admin/index.html
+++ b/admin/index.html
@@ -278,8 +278,8 @@ th { background:#222; color:#fff }
         <th>Nazwisko</th>
         <th>Telefon</th>
         <th>Email</th>
-        <th>Uprawnienia</th> <!-- Przeniesione tuż po Email -->
         <th>Status</th>
+        <th>Uprawnienia</th>
         <th>Pokaż kontakt</th>
         <th>Zapisz</th>
       </tr>
@@ -500,7 +500,6 @@ async function loadData() {
     // Unikalny ID dla kontenera statusu
     const statusContainerId = `status-container-${row.id}`;
     
-    // ZMIENIONA KOLEJNOŚĆ: Uprawnienia zaraz po Email
     tr.innerHTML = `
       <td data-label="Lp">
         <input class="readonly-input" value="${row.lp || ""}" readonly>
@@ -510,11 +509,6 @@ async function loadData() {
       <td data-label="Telefon"><input value="${row.telefon || ""}"></td>
       <td data-label="Email">
         <input class="readonly-input" value="${row.email || ""}" readonly>
-      </td>
-      <td data-label="Uprawnienia"> <!-- Zmienione: teraz tuż po Email -->
-        <div id="links-${row.id}" style="word-break:break-all; max-height:120px; overflow-y:auto; padding:5px;">
-          ${linksHtml}
-        </div>
       </td>
       <td data-label="Status">
         <div id="${statusContainerId}">
@@ -528,6 +522,11 @@ async function loadData() {
             </button>
           </div>
           <!-- Tu będzie pojawiał się komunikat o zapisie -->
+        </div>
+      </td>
+      <td data-label="Uprawnienia">
+        <div id="links-${row.id}" style="word-break:break-all; max-height:120px; overflow-y:auto; padding:5px;">
+          ${linksHtml}
         </div>
       </td>
       <td data-label="Pokaż kontakt">
@@ -656,13 +655,12 @@ async function loadData() {
         }
       }
       
-      // ZMIENIONA KOLEJNOŚĆ: teraz kolumna Uprawnienia jest na 6. pozycji (indeks 5)
-      // inputs[0] - Lp, [1] - Imię, [2] - Nazwisko, [3] - Telefon, [4] - Email
+      // Pomijamy pola Lp i Email w payloadzie, bo są readonly
       const payload = {
-        imie: inputs[1].value,
+        imie: inputs[1].value,    // Pomijamy inputs[0] (Lp)
         nazwisko: inputs[2].value,
         telefon: inputs[3].value,
-        // inputs[4] to Email (pomijamy, bo readonly)
+        // Pomijamy inputs[4] (Email)
         status: currentStatus,
         show_contact: showContactValue
       };
