--- a/profil/index.html
+++ b/profil/index.html
@@ -24,7 +24,7 @@ header {
   background: linear-gradient(135deg, #0B5FA5, #0f72c1);
   color:#fff;
   text-align:center;
-  padding:70px 20px;
+  padding: 30px 20px; /* ZMIENIONE: było 70px 20px, teraz 30px 20px */
 }
 
 header h1 {
@@ -138,9 +138,9 @@ header p {
 /* SEKCJE */
 section {
   max-width:900px;
-  margin:60px auto;
+  margin:40px auto; /* ZMIENIONE: było 60px auto, teraz 40px auto */
   background:#fff;
-  padding:40px;
+  padding:30px; /* ZMIENIONE: było 40px, teraz 30px */
   border-radius:12px;
   box-shadow:0 10px 25px rgba(0,0,0,0.08);
   text-align:center;
