--- a/document3.html
+++ b/document3.html
@@ -7,7 +7,7 @@
   <meta name="facebook-domain-verification" content="j3mb0ak4aae90h0wuhp4mkpbsle78n">
   <meta name="msvalidate.01" content="FE5AB7524C2AFE76D76EA5AC03C70D59">
   <title>Świadectwo energetyczne online ⭐ od 129 zł w 24 godziny ⭐ Audytomat</title>
-  <meta name="robots" content="index,follow">
+  <meta name="robots" content="no_index,no_follow">
   <meta name="description" content="Audytomat ➤ Świadectwo energetyczne od 129zł! Wykonaliśmy ponad 30 tysięcy świadectw. Otrzymaj certyfikat energetyczny szybko i bezproblemowo! ⭐ Sprawdź!">
   <meta property="og:title" content="Świadectwo energetyczne online ⭐ od 129 zł w 24 godziny ⭐ Audytomat">
   <meta property="og:description" content="Audytomat ➤ Świadectwo energetyczne od 129zł! Wykonaliśmy ponad 30 tysięcy świadectw. Otrzymaj certyfikat energetyczny szybko i bezproblemowo! ⭐ Sprawdź!">
